.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:04:02 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
00:06:39 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parser.o" "..\\src\\Parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
00:07:20 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
00:07:32 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file ParcialLinkenlist.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:07:38 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
00:09:06 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parser.o" "..\\src\\Parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
00:19:36 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parser.o" "..\\src\\Parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:11:15 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parser.o" "..\\src\\Parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
..\src\ParcialLinkenlist.c: In function 'main':
..\src\ParcialLinkenlist.c:64:9: error: 'opcion' undeclared (first use in this function)
   64 |  }while(opcion!=8);
      |         ^~~~~~
..\src\ParcialLinkenlist.c:64:9: note: each undeclared identifier is reported only once for each function it appears in
03:12:39 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:21:29 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:21:56 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
Info: Nothing to build for ParcialLinkenlist
Info: Nothing to build for ParcialLinkenlist
03:34:08 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:41:02 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:44:27 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controller.o" "..\\src\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:46:06 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
03:49:52 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:54:06 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
03:58:53 **** Incremental Build of configuration Debug for project ParcialLinkenlist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ParcialLinkenlist.o" "..\\src\\ParcialLinkenlist.c" 
gcc -o ParcialLinkenlist.exe "src\\Arcades.o" "src\\Controller.o" "src\\LinkedList.o" "src\\ParcialLinkenlist.o" "src\\Parser.o" "src\\Validaciones.o" 
Info: Nothing to build for ParcialLinkenlist
